--- a/SadAgregator/View/Base.lproj/Main.storyboard
+++ b/SadAgregator/View/Base.lproj/Main.storyboard
@@ -5035,6 +5035,7 @@
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
                                     </subviews>
+                                    <color key="backgroundColor" name="whiteblack"/>
                                     <constraints>
                                         <constraint firstItem="0Gs-IU-077" firstAttribute="top" secondItem="haN-u0-odb" secondAttribute="topMargin" id="7Wq-yZ-YwK"/>
                                         <constraint firstItem="ZL4-V5-4YT" firstAttribute="top" secondItem="0Gs-IU-077" secondAttribute="bottom" constant="10" id="8aN-JA-k2E"/>
@@ -5044,6 +5045,7 @@
                                         <constraint firstAttribute="bottomMargin" secondItem="ZL4-V5-4YT" secondAttribute="bottom" constant="8" id="sIO-qu-ZrR"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" name="whiteblack"/>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="headerCell" rowHeight="50" id="oOz-eb-dLy">
                                 <rect key="frame" x="0.0" y="343.00000190734863" width="390" height="50"/>
