--- a/SadAgregator/View/Base.lproj/Main.storyboard
+++ b/SadAgregator/View/Base.lproj/Main.storyboard
@@ -5094,6 +5094,127 @@
                                     </constraints>
                                 </tableViewCellContentView>
                             </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="diapazonCell" rowHeight="145" id="Kyg-dv-1GR">
+                                <rect key="frame" x="0.0" y="436.66666984558105" width="390" height="145"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Kyg-dv-1GR" id="2Up-U9-i9K">
+                                    <rect key="frame" x="0.0" y="0.0" width="390" height="145"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Диапазон" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I0m-kh-USK">
+                                            <rect key="frame" x="20" y="11" width="70" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="70" id="lHT-2H-gPG"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" systemColor="systemGrayColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="от" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TLA-Wi-kYO">
+                                            <rect key="frame" x="98" y="11" width="16" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="16" id="LLP-gq-shk"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="200 руб." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y60-JW-1wT">
+                                            <rect key="frame" x="122.00000000000001" y="11" width="63.666666666666671" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="61" id="r8X-5K-pl2"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="до" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FeC-2N-6fs">
+                                            <rect key="frame" x="193.66666666666666" y="11" width="18" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="18" id="IsB-t2-Xj2"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="90 000 руб." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iba-W9-FVd">
+                                            <rect key="frame" x="219.66666666666666" y="11" width="87.333333333333343" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="61" id="Rfv-vP-VTQ"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Наценка" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A6s-gQ-o21">
+                                            <rect key="frame" x="20" y="45" width="62" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="62" id="HlE-e2-b2A"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" systemColor="systemGrayColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UXv-Wb-1mW">
+                                            <rect key="frame" x="90" y="45" width="39" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Округление" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Nm-rg-zAc">
+                                            <rect key="frame" x="20" y="79" width="86" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" systemColor="systemGrayColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="4" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FQl-YE-E9u">
+                                            <rect key="frame" x="114" y="79" width="39" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="6" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Фикс. надбавка" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lsj-QC-FxV">
+                                            <rect key="frame" x="20" y="113" width="112" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="112" id="eSl-Wb-S6j"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" systemColor="systemGrayColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dns-5k-wnG">
+                                            <rect key="frame" x="140" y="113" width="39" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="FeC-2N-6fs" firstAttribute="top" secondItem="2Up-U9-i9K" secondAttribute="topMargin" id="3T9-LL-XfW"/>
+                                        <constraint firstItem="I0m-kh-USK" firstAttribute="top" secondItem="2Up-U9-i9K" secondAttribute="topMargin" id="7dS-3r-Pdf"/>
+                                        <constraint firstItem="FeC-2N-6fs" firstAttribute="leading" secondItem="Y60-JW-1wT" secondAttribute="trailing" constant="8" symbolic="YES" id="9hY-aG-hgZ"/>
+                                        <constraint firstItem="I0m-kh-USK" firstAttribute="leading" secondItem="2Up-U9-i9K" secondAttribute="leadingMargin" id="Cje-nM-KXT"/>
+                                        <constraint firstItem="Lsj-QC-FxV" firstAttribute="top" secondItem="6Nm-rg-zAc" secondAttribute="bottom" constant="16" id="DMR-Xk-FAU"/>
+                                        <constraint firstItem="Y60-JW-1wT" firstAttribute="top" secondItem="2Up-U9-i9K" secondAttribute="topMargin" id="Ga6-JI-cqJ"/>
+                                        <constraint firstItem="6Nm-rg-zAc" firstAttribute="top" secondItem="A6s-gQ-o21" secondAttribute="bottom" constant="16" id="IpG-qL-M6S"/>
+                                        <constraint firstItem="Dns-5k-wnG" firstAttribute="leading" secondItem="Lsj-QC-FxV" secondAttribute="trailing" constant="8" symbolic="YES" id="KHJ-rO-Zp8"/>
+                                        <constraint firstItem="TLA-Wi-kYO" firstAttribute="top" secondItem="2Up-U9-i9K" secondAttribute="topMargin" id="M3B-cW-DU7"/>
+                                        <constraint firstItem="A6s-gQ-o21" firstAttribute="leading" secondItem="2Up-U9-i9K" secondAttribute="leadingMargin" id="NtG-dv-xj7"/>
+                                        <constraint firstItem="iba-W9-FVd" firstAttribute="leading" secondItem="FeC-2N-6fs" secondAttribute="trailing" constant="8" id="PoH-be-AYc"/>
+                                        <constraint firstItem="UXv-Wb-1mW" firstAttribute="leading" secondItem="A6s-gQ-o21" secondAttribute="trailing" constant="8" symbolic="YES" id="UP3-mN-POu"/>
+                                        <constraint firstItem="UXv-Wb-1mW" firstAttribute="bottom" secondItem="A6s-gQ-o21" secondAttribute="bottom" id="YGz-Sc-3IY"/>
+                                        <constraint firstItem="TLA-Wi-kYO" firstAttribute="leading" secondItem="I0m-kh-USK" secondAttribute="trailing" constant="8" symbolic="YES" id="k3n-FL-5uw"/>
+                                        <constraint firstItem="A6s-gQ-o21" firstAttribute="top" secondItem="I0m-kh-USK" secondAttribute="bottom" constant="16" id="n6B-7h-eCR"/>
+                                        <constraint firstItem="FQl-YE-E9u" firstAttribute="leading" secondItem="6Nm-rg-zAc" secondAttribute="trailing" constant="8" symbolic="YES" id="ndw-3q-1gs"/>
+                                        <constraint firstItem="FQl-YE-E9u" firstAttribute="bottom" secondItem="6Nm-rg-zAc" secondAttribute="bottom" id="r36-Pc-Cga"/>
+                                        <constraint firstItem="iba-W9-FVd" firstAttribute="top" secondItem="2Up-U9-i9K" secondAttribute="topMargin" id="rGj-n6-yGU"/>
+                                        <constraint firstItem="Lsj-QC-FxV" firstAttribute="leading" secondItem="2Up-U9-i9K" secondAttribute="leadingMargin" id="rdm-Ye-1cQ"/>
+                                        <constraint firstItem="6Nm-rg-zAc" firstAttribute="leading" secondItem="2Up-U9-i9K" secondAttribute="leadingMargin" id="uQZ-6U-p2D"/>
+                                        <constraint firstItem="Dns-5k-wnG" firstAttribute="bottom" secondItem="Lsj-QC-FxV" secondAttribute="bottom" id="wNO-nd-H8t"/>
+                                        <constraint firstItem="Y60-JW-1wT" firstAttribute="leading" secondItem="TLA-Wi-kYO" secondAttribute="trailing" constant="8" symbolic="YES" id="xJO-6w-paE"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
                         </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="rme-rn-mGo" id="aIr-WF-Foq"/>
